; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_datetime.c_DATETIME_IsDateInValidRange.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_datetime.c_DATETIME_IsDateInValidRange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@max_allowed_date = common dso_local global i32 0, align 4
@min_allowed_date = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@MCM_GETRANGE = common dso_local global i32 0, align 4
@GDTR_MAX = common dso_local global i32 0, align 4
@GDTR_MIN = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*)* @DATETIME_IsDateInValidRange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DATETIME_IsDateInValidRange(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca [2 x i32], align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @MONTHCAL_CompareSystemTime(i32* %8, i32* @max_allowed_date)
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @MONTHCAL_CompareSystemTime(i32* %12, i32* @min_allowed_date)
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %17

15:                                               ; preds = %11, %2
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %3, align 4
  br label %52

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @MCM_GETRANGE, align 4
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  %23 = ptrtoint i32* %22 to i32
  %24 = call i32 @SendMessageW(i32 %20, i32 %21, i32 0, i32 %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @GDTR_MAX, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %17
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 1
  %32 = call i32 @MONTHCAL_CompareSystemTime(i32* %30, i32* %31)
  %33 = icmp eq i32 %32, 1
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i32, i32* @FALSE, align 4
  store i32 %35, i32* %3, align 4
  br label %52

36:                                               ; preds = %29
  br label %37

37:                                               ; preds = %36, %17
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* @GDTR_MIN, align 4
  %40 = and i32 %38, %39
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %50

42:                                               ; preds = %37
  %43 = load i32*, i32** %5, align 8
  %44 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  %45 = call i32 @MONTHCAL_CompareSystemTime(i32* %43, i32* %44)
  %46 = icmp eq i32 %45, -1
  br i1 %46, label %47, label %49

47:                                               ; preds = %42
  %48 = load i32, i32* @FALSE, align 4
  store i32 %48, i32* %3, align 4
  br label %52

49:                                               ; preds = %42
  br label %50

50:                                               ; preds = %49, %37
  %51 = load i32, i32* @TRUE, align 4
  store i32 %51, i32* %3, align 4
  br label %52

52:                                               ; preds = %50, %47, %34, %15
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @MONTHCAL_CompareSystemTime(i32*, i32*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
